# balls

./: .clang-tidy  .gitmodules  CMakeLists.txt  CMakePresets.json
src/: .clang-tidy  CMakeLists.txt
src/balls/: CMakeLists.txt  collision.cpp  collision.hpp  config.hpp  distance.cpp  ecs.hpp  error.hpp  events.hpp  geometry.hpp  intersection.cpp  intersection.hpp  main.cpp  sdl.cpp  sdl.hpp  timer.cpp  view.cpp  view.hpp  world.cpp  world.hpp
src/editor/: CMakeLists.txt  canvas.hpp  main.cpp  widgets.hpp  window.hpp
src/geometry/: CMakeLists.txt  geometry.cpp  intersection.cpp
src/geometry/include/: distance.hpp  geometry.hpp  intersection.hpp
src/sdl-cpp/: CMakeLists.txt  sdl.cpp
src/sdl-cpp/include/: sdl.hpp
src/toolkit/: CMakeLists.txt
src/toolkit/include/: error.hpp  timer.hpp
